--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,18 @@
 {
+    "name": "goldenfeathers/hw4",
+    "description": "trying (and failing) to get points",
+    "authors": [
+        {
+            "name": "tkglassey",
+            "email": "tkglassey@gmail.com"
+        }
+    ],
     "require": {
-        "vendor/package": "1.3.2",
-        "vendor/package2": "1.*",
-        "vendor/package3": "^2.0.3"
+        "monolog/monolog": "1.0.*"
+    },
+    "autoload": {
+        "psr-4": { 
+            "goldenFeathers\\hw4\\": ["src/"]
+        }
     }
 }
