--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,10 @@
         "monolog/monolog": "1.0.*"
     },
     "autoload": {
-        "psr-4": { 
-            "goldenFeathers\\hw4\\": ["src/"]
-        }
+        "files": [
+            "./src/controllers/LandingAdapter.php",
+            "./src/views/LandingView.php",
+            "./src/models/LandingModel.php"
+        ]
     }
 }
